# demo-paper-survey

./: .gitignore  .gitmodules  AGENTS.md  README.md  proposal.md  proposal.pptx  pyproject.toml
.promptx/: pouch.json
.promptx/resource/: project.registry.json
bp/: proposal.md
context/: README.md
context/design/: README.md
context/hints/: README.md
context/instructions/: README.md
context/logs/: README.md
context/plans/: README.md
context/refcode/: README.md
context/roles/: README.md
context/summaries/: README.md
context/tasks/: README.md
context/tasks/backlog/: README.md
context/tasks/done/: README.md
context/tasks/working/: README.md
context/tools/: README.md
notes/: README.md  summary.md
notes/streamdiffusionv2/: main-note.md
paper-source/tex/: 00README.json  example_paper.bib  fairmeta.cls  listing2.pygtex  listing3.pygtex  listing4.pygtex  listing5.pygtex  math_commands.tex  paper.tex
paper-source/tex/_minted-output/: B6DB15C65EB5769F88ABE982C3BC2CC2CEE634BC4354F99FFB5F39094E179311.pygtex
paper-source/tex/code/: attention_inference.py  attention_train.py  constants.py  train.py  transformer_roofline.py
paper-source/v1-tex/: 00README.json  main.bbl  main.bib  main.tex
paper-source/v1-tex/sec/: 0_abstract.tex  1_intro.tex  2_relatedwork.tex  3_methodology.tex  4_experiments.tex  5_conclusion.tex  6_acknowledgments.tex  7_spp.tex
scripts/: README.md  generate_proposal_pptx.py
